[tool.poetry]
name = "repl_nix_FANTASY-STAR-ONLINE"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.4.4"
lxml = "^4.9.1"
requests = "^2.28.1"
bs4 = "^0.0.1"
numpy = "^1.23.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
